# rl-playground

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  repo_structure.md
src/rl/algos/: __init__.py  registry.py
src/rl/algos/actor_critic/: ppo.py
src/rl/algos/tabular/: q_learning.py
src/rl/configs/: _base.yaml  ppo_cartpole_quick.yaml  q_learning_cartpole_quick.yaml
src/rl/core/: evaluate.py  logger.py  replay_buffer.py  rollout.py  seed.py  trainer.py
src/rl/envs/: make_env.py  wrappers.py
src/rl/scripts/: eval.py  train.py
tests/: test_agent_contract.py  test_registry_docstrings.py
